# Aubo-Robot-ROS

./: README.md
aubo_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
aubo_driver/config/: aubo_i5_controllers.yaml
aubo_driver/include/aubo_driver/: aubo_driver.hpp  aubo_hardware_interface.hpp
aubo_driver/launch/: aubo_i5_control.launch.py
aubo_driver/rviz/: aubo_i5_control.rviz
aubo_driver/src/: aubo_driver.cpp  aubo_hardware_interface.cpp
aubo_driver/test/: test_urdf_xacro.py
aubo_driver/urdf/: aubo.ros2_control.xacro
aubo_i5_description/: CMakeLists.txt  package.xml
aubo_i5_description/config/: urdf.rviz
aubo_i5_description/launch/: display.launch  view_aubo_i5.launch.py
aubo_i5_description/meshes/collision/: base_link.stl  forearm_link.stl  shoulder_link.stl  upper_arm_link.stl  wrist_1_link.stl  wrist_2_link.stl  wrist_3_link.stl
aubo_i5_description/meshes/visual/: base_link.dae  forearm_link.dae  shoulder_link.dae  wrist_1_link.dae  wrist_2_link.dae  wrist_3_link.dae
aubo_i5_description/rviz/: view_robot.rviz
aubo_i5_description/urdf/: aubo_aligned_urdf.gazebo  aubo_aligned_urdf.trans  aubo_aligned_urdf.xacro  aubo_i5.urdf  aubo_i5.urdf.xacro  aubo_i5.xacro  aubo_i5_gazebo.xacro  aubo_i5_macro.xacro  aubo_i5_transmission.xacro  materials.xacro
aubo_i5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aubo_i5_moveit_config/config/: aubo_i5.ros2_control.xacro  aubo_i5.srdf  aubo_i5.urdf.xacro  fake_controllers.yaml  gazebo_aubo_i5.urdf  gazebo_controllers.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml
aubo_i5_moveit_config/launch/: aubo_i5_moveit.launch.py  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch.py  fake_moveit_controller_manager.launch.xml  gazebo.launch  gazebo_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  rsp.launch.py  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  setup_assistant.launch.py  simple_moveit_controller_manager.launch.xml  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  stomp_planning_pipeline.launch.xml  warehouse_db.launch.py
aubo_i5_planning_interface/: CMakeLists.txt  package.xml  setup.py
aubo_i5_planning_interface/scripts/: move_line
aubo_i5_planning_interface/src/aubo_i5_planning_interface/: planning_interface.py
aubo_i5_planning_interface/src/aubo_i5_planning_interface/utils/: control_utils.py
aubo_ros_control/: CMakeLists.txt  package.xml
aubo_ros_control/config/: aubo_controllers.yaml  rviz.rviz
aubo_ros_control/dependent/inc/aubo_sdk/: AuboRobotMetaType.h  communicationmatetype.h  errorinfoservice.h  forcecontrol.h  globalutil.h  half_float.h  hanweiservices.h  ikfunc.h  internalMateType.h  protoencodedecode.h  re.h  robotParameters.pb.h  robotbasecontrolservice.h  robotbaseservices.h  robotcommon.pb.h  robotcommunication.pb.h  robotcommunicationclient.h  robotcontrolservices.h  robotconveyortrack.h  robotioservice.h  robotlogprint.h  robotmovecondition.pb.h  robotmoveservice.h  robottracelog.h  robotutilservice.h  sensor.pb.h  serviceinterface.h
aubo_ros_control/dependent/robotsdk/inc/: AuboRobotMetaType.h  serviceinterface.h
aubo_ros_control/dependent/servojsdk/inc/: servojinterface.h
aubo_ros_control/include/aubo_ros_control/: aubo_driver.h  aubo_hardware_interface.h  joint_limit_interface.h  otg_interface.h
aubo_ros_control/launch/: aubo_bringup.launch
aubo_ros_control/src/: aubo_driver.cpp  aubo_hardware_interface.cpp  aubo_hardware_interface_node.cpp  test_aubo_driver.cpp
aubo_ros_control/urdf/: aubo_i5.urdf
